[package]
name = "tetra-master-calc"
version = "0.1.0"
edition = "2021"
description = "Calculator for Tetra Master mini-game in Final Fantasy IX"
license = "MIT"
repository = "https://github.com/bryan-barreto/tetra-master-calc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
